[package]
  name = "etherdream"
  version = "0.0.7"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "An EtherDream (laser projector DAC) library."
  keywords = [ "EtherDream", "laser", "projector", "ether", "dream" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/etherdream.rs"
  documentation = "https://docs.rs/etherdream"

[lib]
  name = "etherdream"
  path = "src/lib.rs"

[dependencies]
  byteorder = "0.5.*"
  ilda = "0.0.2"
  log = "0.3.*"
  net2 = "0.2.*"

[badges]
  travis-ci = { repository = "echelon/etherdream.rs" }

[dev_dependencies]
  camera_capture = "0.3"
  image = "0.7"

