[package]
  name = "etherdream"
  version = "0.1.1"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "An EtherDream (laser projector DAC) library."
  keywords = [ "EtherDream", "laser", "projector", "ether", "dream" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/etherdream.rs"
  documentation = "https://docs.rs/etherdream"

[lib]
  name = "etherdream"
  path = "src/lib.rs"

[dependencies]
  byteorder = "0.5.*"
  ilda = "0.0.2"
  log = "0.3.*"
  net2 = "0.2.*"
  point = "0.3.*"

[badges]
  travis-ci = { repository = "echelon/etherdream.rs" }

